Messed up something with Interpreter.java